--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./bin/www --inspect"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
