--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^7.0.0",
     "morgan": "~1.9.1",
     "node-fetch": "^3.3.1",
+    "puppeteer": "^19.9.0",
     "xml2js": "^0.5.0"
   },
   "devDependencies": {
